// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form.Checkbox default render for checkboxes in a group 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form>
        <div
          class="FormField-root"
        >
          <label
            class="FormLabel-root"
            for="checkbox-group"
          >
            <span
              class="FormLabel-text"
            >
              checkbox-group-label
               (optional)
            </span>
          </label>
          <div
            class="MuiFormGroup-root makeStyles-root makeStyles-root makeStyles-vertical"
            label="checkbox-group-label"
            name="checkbox-group"
          >
            <label
              class="FormControlLabel-root PicassoCheckbox-root picasso-checkbox"
            >
              <span
                class="Container-flex Container-inline PicassoCheckbox-checkboxWrapper"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input"
                      data-indeterminate="false"
                      name="checkbox-group"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="PicassoCheckbox-uncheckedIcon"
                    />
                  </span>
                </span>
              </span>
              <span
                class="FormLabel-root FormLabel-inline FormControlLabel-label PicassoCheckbox-label"
              >
                <span
                  class="FormLabel-text"
                >
                  checkbox-label-0
                </span>
              </span>
            </label>
            <label
              class="FormControlLabel-root PicassoCheckbox-root picasso-checkbox"
            >
              <span
                class="Container-flex Container-inline PicassoCheckbox-checkboxWrapper"
              >
                <span
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <input
                      class="PrivateSwitchBase-input"
                      data-indeterminate="false"
                      name="checkbox-group"
                      type="checkbox"
                      value=""
                    />
                    <div
                      class="PicassoCheckbox-uncheckedIcon"
                    />
                  </span>
                </span>
              </span>
              <span
                class="FormLabel-root FormLabel-inline FormControlLabel-label PicassoCheckbox-label"
              >
                <span
                  class="FormLabel-text"
                >
                  checkbox-label-1
                </span>
              </span>
            </label>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form.Checkbox default render for single checkbox 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form>
        <div
          class="FormField-root"
          data-testid="single-checkbox"
        >
          <label
            class="FormControlLabel-root PicassoCheckbox-root picasso-checkbox"
          >
            <span
              class="Container-flex Container-inline PicassoCheckbox-checkboxWrapper"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="single-checkbox"
                    name="single-checkbox"
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="PicassoCheckbox-uncheckedIcon"
                  />
                </span>
              </span>
            </span>
            <span
              class="FormLabel-root FormLabel-inline FormControlLabel-label PicassoCheckbox-label"
            >
              <span
                class="FormLabel-text"
              >
                checkbox-label
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form.Checkbox required with asterisk single checkbox 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class=""
    >
      <form>
        <div
          class="FormField-root"
          data-testid="single-checkbox"
        >
          <label
            class="FormControlLabel-root PicassoCheckbox-root picasso-checkbox"
          >
            <span
              class="Container-flex Container-inline PicassoCheckbox-checkboxWrapper"
            >
              <span
                aria-disabled="false"
                class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root MuiCheckbox-root PicassoCheckbox-root MuiCheckbox-colorSecondary PicassoCheckbox-withLabel MuiIconButton-colorSecondary"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <input
                    class="PrivateSwitchBase-input"
                    data-indeterminate="false"
                    id="single-checkbox"
                    name="single-checkbox"
                    required=""
                    type="checkbox"
                    value=""
                  />
                  <div
                    class="PicassoCheckbox-uncheckedIcon"
                  />
                </span>
              </span>
            </span>
            <span
              class="FormLabel-root FormLabel-inline FormControlLabel-label PicassoCheckbox-label"
            >
              <span
                class="FormLabel-asterisk"
              >
                *
              </span>
              <span
                class="FormLabel-text"
              >
                checkbox-label
              </span>
            </span>
          </label>
        </div>
      </form>
    </div>
  </div>
</div>
`;
